@@ -106,7 +106,12 @@
 			<label index="adminFunctions">Admin functions</label>
 			<label index="enableInstallTool.label">Install Tool Access</label>
 			<label index="enableInstallTool.createFile">Create Install Tool Enable File</label>
+			<label index="enableInstallTool.file">Install Tool Enable file</label>
+			<label index="enableInstallTool.fileCreate_ok">The Install Tool Enable file has been created.</label>
+			<label index="enableInstallTool.fileCreate_failed">The Install Tool Enable file could not be created.</label>
 			<label index="enableInstallTool.deleteFile">Delete Install Tool Enable File</label>
+			<label index="enableInstallTool.fileDelete_ok">The Install Tool Enable file has been deleted.</label>
+			<label index="enableInstallTool.fileDelete_failed">The Install Tool Enable file could not be deleted!</label>
 			<label index="tempDataCleared">Temporary data cleared</label>
 			<label index="tempDataClearedFlashMessage">The temporary data has been cleared.</label>
 			<label index="tempDataClearedLog">Temporary data cleared</label>
